--- a/src/components/InfoBanner/InfoBanner.css
+++ b/src/components/InfoBanner/InfoBanner.css
@@ -1,3 +1,4 @@
+/* Original Styles (unchanged) */
 .banner-wrapper {
   display: flex;
   justify-content: space-between;
@@ -62,9 +63,7 @@
   z-index: 1;
 }
 
-
-
-
+/* Enhanced Responsive Styles */
 @media (max-width: 992px) {
   .banner-wrapper {
     flex-direction: column;
@@ -76,36 +75,82 @@
   .banner-left {
     width: 100%;
     margin-left: 0;
+    margin-bottom: 30px; /* Added space between text and image */
   }
 
   .banner-text {
     font-size: 18px;
     max-width: 100%;
+    margin: 0 auto; /* Center text */
   }
 
   .banner-right {
-    position: static;
+    position: relative; /* Changed from absolute */
+    right: auto;
     width: 100%;
-    margin-top: 30px;
+    margin-top: 20px;
   }
 
   .card-images img {
     width: 100%;
-    max-width: 300px;
+    max-width: 500px;
     height: auto;
   }
 }
 
-@media (max-width: 576px) {
+/* Specific breakpoint for moving image below text (below 500px) */
+@media (max-width: 500px) {
+  .banner-wrapper {
+    flex-direction: column;
+    padding: 30px 15px;
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+
+  .banner-left {
+    order: 1; /* Text comes first */
+    width: 100%;
+    margin-bottom: 25px;
+  }
+
+  .banner-right {
+    order: 2; /* Image comes after */
+    width: 100%;
+    position: static;
+    margin-top: 0;
+  }
+
+  .card-images img {
+    max-width: 100%;
+    height: auto;
+    max-height: 450px;
+  }
+
   .banner-title {
     font-size: 20px;
+    margin-bottom: 15px;
   }
 
   .banner-text {
     font-size: 16px;
   }
+}
 
+/* Smaller phones (below 400px) */
+@media (max-width: 400px) {
+  .banner-wrapper {
+    padding: 25px 12px;
+  }
+  
+  .banner-title {
+    font-size: 18px;
+  }
+  
+  .banner-text {
+    font-size: 15px;
+  }
+  
   .card-images img {
-    max-width: 90%;
+    max-height: 400px;
   }
 }
