--- a/src/components/ProductApp/ProductApp.css
+++ b/src/components/ProductApp/ProductApp.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #11336f;
+  background-color: #0e2753;
   color: white;
   padding: 40px;
   border-radius: 20px;
