--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,16 @@
-.header{
-height: 36vw;
-width: 97vW;
-margin-left: 0;
-margin-right: 20px;
-margin-top: 20px;
-background: url('/header_img.png') no-repeat;
-background-size: cover;
-background-position: center;
-padding: 0px 40px 40px 0px;
-position: relative;
-
+.header {
+  height: 36vw;
+  width: 90%;                 /* give spacing on both sides */
+  max-width: 1350px;          /* don’t let it stretch too wide */
+  margin: 20px auto;          /* center horizontally + space on top */
+  
+  background: url('/header_img.png') no-repeat;
+  background-size: cover;
+  background-position: center;
+  
+  padding: 0px 40px 40px 0px;
+  position: relative;
+  border-radius: 15px;        /* optional: matches other sections */
 }
 
 .header-contents{
